--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 
 	
     <!-- Add Jquery Plugin -->
-    <script type="text/javascript" src="jquery-3.3.1.min.js"></script>
+    <script type="text/javascript" src="https://code.jquery.com/jquery-3.3.1.min.js"></script>
     <!-- Start Preloader code -->
 	<script type="text/javascript">
 		$(window).on('load', function() {
